WIP - Insertion Sort KATA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,12 @@ project(
 
 include(${PROJECT_SOURCE_DIR}/tools/cmake/Modules/BuildToolsMain.cmake)
 
+# Surpress CTest Targets (Continuous, Experimental, Nightly)
+set_property(GLOBAL PROPERTY CTEST_TARGETS_ADDED 1)
+
+# Surpress MSVC Target ZERO_CHECK
+set(CMAKE_SUPPRESS_REGENERATION true)
+
 log_info("Generating Global Settings INTERFACE target")
 add_library(GlobalSettings INTERFACE)
 target_compile_features(GlobalSettings INTERFACE cxx_std_20)
